# pico-w-projects

./: README.md
embassy/http-request/: Cargo.toml  README.md  flake.nix
embassy/http-request/src/: http_client.rs  main.rs  wifi.rs
