[package]
name = "http-request"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { version = "0.10.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
    "defmt",
] }
embassy-time = { version = "0.5.1", features = [
    "defmt-timestamp-uptime",
    "defmt",
] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
static_cell = "2.1"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }


# defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }
embassy-net = { version = "0.9.1", features = [
    "icmp",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
    "defmt",
] }


serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
reqwless = { git = "https://github.com/drogue-iot/reqwless", rev = "68f703dfc16e6f7f964b7238c922c0d433118872", features = [
    "defmt",
] }
heapless = "0.9.3"
